--- a/Style/style.css
+++ b/Style/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: darkgrey;
+    background-color:  #666666;
 }
 
 h1 {
@@ -16,5 +16,5 @@ p {
 }
 
     div { 
-    background-color: white;
+    background-color: #FFFFFF;
     }
