--- a/Style/style.css
+++ b/Style/style.css
@@ -3,11 +3,19 @@ body {
 }
 
 h1 {
-    color: black;
+    color: #FFFFFF;
 }
     
 h2 {
-    color: black;
+    color: #FFFFFF;
+}
+
+h3 {
+    color: #FFFFFF;
+}
+
+h4 {
+    color: #FFFFFF;
 }
 
 p {
