--- a/Style/style.css
+++ b/Style/style.css
@@ -3,19 +3,19 @@ body {
 }
 
 h1 {
-    color: #FFFFFF;
+    color: black;
 }
     
 h2 {
-    color: #FFFFFF;
+    color: black;
 }
 
 h3 {
-    color: #FFFFFF;
+    color: black;
 }
 
 h4 {
-    color: #FFFFFF;
+    color: black;
 }
 
 p {
